--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,55 @@
     font-family: "Arial", sans-serif;
 }
 
+header {
+    width: 100%;
+    height: 80px;
+    background-color: #29b6f6;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
+header h1 {
+    color: white;
+}
+
+header i.fa.fa-user {
+    font-size: 20px;
+    padding-right: 5px;
+    color: white;
+}
+
+header p {
+    color: white;
+}
+
+footer {
+    width: 100%;
+    height: 80px;
+    background-color: #ff9800;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    color: white;
+}
+
+footer div.textFooter:first-child{
+    font-weight: bold;
+}
+
+footer .polices{
+    text-align: center;
+}
+
+footer a{
+    color: white;
+}
+
+
+
 /* body {
     margin: 0;
     padding: 0;
@@ -81,14 +130,14 @@
     left: 0;
     width: 0%;
     height: 2px;
-    background: #2691d9;
+    background: #29b6f6;
     transition: .5s;
 }
 
 .login .inputsLogin input:focus~label,
 .login .inputsLogin input:valid~label {
     top: -5px;
-    color: #2691d9;
+    color: #29b6f6;
 }
 
 .login .inputsLogin input:focus~span::before,
@@ -98,7 +147,7 @@
 
 .login .recoverPassword {
     margin: -5px 0 20px 5px;
-    color: #2691d9;
+    color: #29b6f6;
     cursor: pointer;
 }
 
@@ -110,7 +159,7 @@
     width: 100%;
     height: 50px;
     border: 1px solid;
-    background: #2691d9;
+    background: #29b6f6;
     border-radius: 25px;
     font-size: 18px;
     color: #e9f4fb;
@@ -120,7 +169,8 @@
 }
 
 .login .buttonSubmit:hover {
-    border-color: #2691d9;
+    /* border-color: #2691d9; */
+    border-color: #29b6f6;
     transition: .5s;
 }
 
@@ -129,3 +179,5 @@
     padding-bottom: 40px;
     font-weight: bold;
 }
+
+/* CSS poll.php */
