--- a/styles.css
+++ b/styles.css
@@ -137,8 +137,8 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 1000px;
-    height: 500px;
+    width: 70%;
+    height: 45%;
     background: white;
     border-radius: 10px;
     box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.05);
@@ -152,8 +152,8 @@
 }
 
 .landingPage .buttonGoLogin {
-    width: 250px;
-    height: 50px;
+    width: 35%;
+    height: 60px;
     border: 1px solid;
     background: #2691d9;
     border-radius: 25px;
@@ -165,9 +165,14 @@
     outline: none;
 }
 
+.landingPage center{
+    padding-top: 40px;
+}
+
 .landingPage .buttonGoLogin:hover {
     border-color: #2691d9;
     transition: .5s;
+    width: 37%;
 }
 
 .landingPage .card h1 {
