--- a/styles.css
+++ b/styles.css
@@ -40,8 +40,7 @@ footer {
     justify-content: space-around;
     align-items: center;
     color: white;
-    bottom: 0;
-    position: absolute;
+    margin-top: 20px;
 }
 
 footer div.textFooter:first-child{
@@ -58,7 +57,7 @@ footer a{
 
 /* CSS login.php */
 
-.login {
+.page-login {
     margin: 0;
     padding: 0;
     background-color: #29b6f6;
@@ -66,7 +65,7 @@ footer a{
     overflow: hidden;
 }
 
-.login .card {
+.page-login .card {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -77,24 +76,24 @@ footer a{
     box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.05);
 }
 
-.login .card h1 {
+.page-login .card h1 {
     text-align: center;
     padding: 20px 0;
     border-bottom: 1px solid silver;
 }
 
-.login .card form {
+.page-login .card form {
     padding: 40px 40px;
     box-sizing: border-box;
 }
 
-.login form .inputsLogin {
+.page-login form .inputsLogin {
     position: relative;
     border-bottom: 2px solid #adadad;
     margin: 30px 0;
 }
 
-.login .inputsLogin input {
+.page-login .inputsLogin input {
     width: 100%;
     padding: 0 5px;
     height: 40px;
@@ -104,7 +103,7 @@ footer a{
     outline: none;
 }
 
-.login .inputsLogin label {
+.page-login .inputsLogin label {
     position: absolute;
     top: 50%;
     left: 5px;
@@ -115,7 +114,7 @@ footer a{
     transition: .5s;
 }
 
-.login .inputsLogin span::before {
+.page-login .inputsLogin span::before {
     content: '';
     position: absolute;
     top: 40px;
@@ -126,28 +125,28 @@ footer a{
     transition: .5s;
 }
 
-.login .inputsLogin input:focus~label,
-.login .inputsLogin input:valid~label {
+.page-login .inputsLogin input:focus~label,
+.page-login .inputsLogin input:valid~label {
     top: -5px;
     color: #29b6f6;
 }
 
-.login .inputsLogin input:focus~span::before,
-.login .inputsLogin input:valid~span::before {
+.page-login .inputsLogin input:focus~span::before,
+.page-login .inputsLogin input:valid~span::before {
     width: 100%;
 }
 
-.login .recoverPassword {
+.page-login .recoverPassword {
     margin: -5px 0 20px 5px;
     color: #29b6f6;
     cursor: pointer;
 }
 
-.login .recoverPassword:hover {
+.page-login .recoverPassword:hover {
     text-decoration: underline;
 }
 
-.login .buttonSubmit {
+.page-login .buttonSubmit {
     width: 100%;
     height: 50px;
     border: 1px solid;
@@ -160,13 +159,13 @@ footer a{
     outline: none;
 }
 
-.login .buttonSubmit:hover {
+.page-login .buttonSubmit:hover {
     /* border-color: #2691d9; */
     border-color: #29b6f6;
     transition: .5s;
 }
 
-.login .card .messageError {
+.page-login .card .messageError {
     text-align: center;
     padding-bottom: 40px;
     font-weight: bold;
@@ -174,7 +173,7 @@ footer a{
 
 /* CSS landingPage.php */
 
-.landingPage {
+.page-landingPage {
     margin: 0;
     padding: 0;
     background-color: #29b6f6;
@@ -182,7 +181,7 @@ footer a{
     overflow: hidden;
 }
 
-.landingPage .card {
+.page-landingPage .card {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -194,14 +193,14 @@ footer a{
     box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.05);
 }
 
-.landingPage .card .card-content{
+.page-landingPage .card .card-content{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     height: 70%;
 }
 
-.landingPage .buttonGoLogin {
+.page-landingPage .buttonGoLogin {
     width: 35%;
     height: 60px;
     border: 1px solid;
@@ -215,23 +214,20 @@ footer a{
     outline: none;
 }
 
-.landingPage center{
-    padding-top: 40px;
-}
 
-.landingPage .buttonGoLogin:hover {
+.page-landingPage .buttonGoLogin:hover {
     border-color: #2691d9;
     transition: .5s;
     width: 37%;
 }
 
-.landingPage .card h1 {
+.page-landingPage .card h1 {
     text-align: center;
     padding: 20px 0;
     font-size: 40px;
 }
 
-.landingPage .card>h1 {
+.page-landingPage .card>h1 {
     text-align: center;
     padding: 20px 0;
     border-bottom: 1px solid silver;
@@ -240,24 +236,26 @@ footer a{
 
 /* CSS dashboard.php */
 
-.dashboard{
-    background-color: #f9f9f9;
+.page-dashboard{
+    background-color: #ff9800;
     height: 100vh;
 }
+.page-dashboard .global-container{
+    background-color: #f9f9f9;
+    height: auto;
+}
 
-.dashboard .card {
-    position: absolute;
+.page-dashboard .card {
     top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 1300px;
+    margin: 0 7.5%;
+    width: 85%;
     height: 450px;
     background: white;
     border-radius: 10px;
     box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.05);
 }
 
-.dashboard .card .card-content {
+.page-dashboard .card .card-content {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -265,7 +263,7 @@ footer a{
     height: 100%;
 }
 
-.dashboard .card .card-content button{
+.page-dashboard .card .card-content button{
     width: 200px;
     height: 200px;
     border-radius: 10px;
@@ -273,7 +271,7 @@ footer a{
     cursor: pointer;
 }
 
-.dashboard .card .card-content button:hover{
+.page-dashboard .card .card-content button:hover{
     width: 220px;
     height: 220px;
     transition: .5s;
@@ -281,24 +279,26 @@ footer a{
 
 /* CSS poll.php */
 
-.poll{
+.page-poll .global-container{
     background-color: #f9f9f9;
-    height: 100vh;
+    height: auto;
 }
 
-.poll .card {
-    position: absolute;
-    top: 18%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 1300px;
+.page-poll{
+    background-color: #ff9800;
+    height: 100%;
+}
+
+.page-poll .card {
+    margin: 0 7.5% 20px;
+    width: 85%;
     height: auto;
     background: white;
     border-radius: 10px;
     box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.05);
 }
 
-.poll .card .card-content {
+.page-poll .card .card-content {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -308,7 +308,7 @@ footer a{
     padding-bottom: 20px;
 }
 
-.poll .card .card-content button{
+.page-poll .card .card-content button{
     width: auto;
     height: 50px;
     border-radius: 10px;
@@ -316,12 +316,12 @@ footer a{
     cursor: pointer;  
 }
 
-.poll .card .card-content button:hover{
+.page-poll .card .card-content button:hover{
     height: 60px;
     transition: .5s;
 }
 
-.poll h3{
+.page-poll h3{
     padding: 8px;
 }
 
