--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,10 @@ footer a {
     color: white;
 }
 
+i{
+    cursor: pointer;
+}
+
 /* CSS login.php */
 
 .page-login {
@@ -237,7 +241,7 @@ footer a {
     width: 35%;
     height: 60px;
     border: 1px solid;
-    background: #2691d9;
+    background: #29b6f6;
     border-radius: 25px;
     font-size: 18px;
     color: #e9f4fb;
@@ -249,7 +253,7 @@ footer a {
 
 
 .page-landingPage .buttonGoLogin:hover {
-    border-color: #2691d9;
+    border-color: #29b6f6;
     transition: .5s;
     width: 37%;
 }
