--- a/styles.css
+++ b/styles.css
@@ -501,3 +501,27 @@ i{
     padding-bottom: 10px;
     font-weight: bold;
 }
+
+#divAlertas{
+    position: absolute;
+    top: 80px;
+    width: 100%;
+    text-align: center;
+}
+
+.divAlerta{
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0px 0px 20px 20px;
+}
+
+.divAlerta button{
+    position: absolute;
+    top: 15px;
+    right: 10px;
+    background-color: #29b5f600;
+    width: 19px;
+    border-radius: 5px;
+}
