--- a/styles.css
+++ b/styles.css
@@ -380,7 +380,7 @@ i{
     flex-direction: row;
     justify-content: space-around;
     align-items: flex-start;
-    height: 100%;
+    /*height: 100%;*/
     padding-top: 20px;
     padding-bottom: 20px;
 }
