--- a/styles.css
+++ b/styles.css
@@ -248,13 +248,10 @@ i{
 }
 
 .page-landingPage .card {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 70%;
+    margin-left: 20%;
+    width: 60%;
+    margin-top: 5%;
     min-height: 60%;
-    height: auto;
     background: white;
     border-radius: 10px;
     box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.05);
