--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,11 @@
     align-items: center;
 }
 
+header{
+    position: relative;
+    z-index: 2;
+}
+
 header h1 {
     color: white;
 }
@@ -120,6 +125,126 @@ footer a {
 i{
     cursor: pointer;
 }
+
+
+/* CSS animacion index.php */
+
+.fa-solid.fa-message.animation1{
+    animation: interactiveChat 10s ease-in-out infinite;
+    position: absolute;
+    top: 70%;
+    left: 1%;
+    color: #00405e;
+    z-index: 1;
+    opacity: 0%;
+}
+
+.fa-solid.fa-message.animation2{
+    animation: interactiveChatReverse 10s ease-in-out infinite;
+    position: absolute;
+    top: 70%;
+    right: 1%;
+    color: #00405e;
+    transform: scaleX(-1);
+    z-index: 1;
+    opacity: 0%;
+}
+
+#icon1{
+    animation-delay: 0ms;
+}
+
+#icon2{
+    animation-delay: 2.1s;
+}
+#icon3{
+    animation-delay: 4.2s;
+}
+#icon4{
+    animation-delay: 6.3s;
+}
+#icon5{
+    animation-delay: 8.4s;
+}
+
+@keyframes interactiveChatReverse {
+    0% {
+        opacity: 100%;
+        display: block;
+    }
+    14% {
+        right: 3%;
+        font-size: 100px;
+        top: 70%;
+    }
+    28% {
+        top: 50%;
+        color: #04a3ec;
+    }
+    35% {
+        top: 50%;
+        opacity: 100%;
+    }
+    49% {
+        top: 32%;
+    }
+    56% {
+        top: 32%;
+    }
+    70% {
+        top: 17%;
+    }
+    77% {
+        top: 17%;
+    }
+    100% {
+        top: -20%;
+        right: 3%;
+        color: #04a3ec;
+        font-size: 100px;
+        opacity: 0%;
+    }
+  }
+
+@keyframes interactiveChat {
+    0% {
+        opacity: 100%;
+      display: block;
+    }
+    14% {
+        left: 3%;
+        font-size: 100px;
+        top: 70%;
+    }
+    28% {
+        top: 50%;
+        color: #04a3ec;
+    }
+    35% {
+        top: 50%;
+        opacity: 100%;
+    }
+    49% {
+        top: 32%;
+    }
+    56% {
+        top: 32%;
+    }
+    70% {
+        top: 17%;
+    }
+    77% {
+        top: 17%;
+    }
+    100% {
+        top: -20%;
+        left: 3%;
+        color: #04a3ec;
+        font-size: 100px;
+        opacity: 0%;
+    }
+  }
+
 
 /* CSS login.php */
 
@@ -251,8 +376,8 @@ i{
     margin-left: 20%;
     width: 60%;
     margin-top: 5%;
-    min-height: 60%;
-    background: white;
+    height: 60%;
+    background: rgba(255, 255, 255, 0.39);
     border-radius: 10px;
     box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.05);
 }
@@ -261,20 +386,17 @@ i{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    min-height: 550px;
+    min-height: 70%;
 }
 
 .page-landingPage .card .card-content div{
     margin: auto 0;
 }
 
-.page-landingPage .card .card-content div button{
-    margin-top: 40px;
-}
-
 .page-landingPage .buttonGoLogin {
     width: 35%;
     height: 60px;
+    min-height: 30px;
     border: 1px solid;
     background: #29b6f6;
     border-radius: 25px;
