--- a/styles.css
+++ b/styles.css
@@ -541,6 +541,39 @@ i{
     display: none;
 }
 
+.page-poll #divEliminar #divOptionsBeforeDelete{
+    text-align: center;
+    }
+
+.page-poll #divEliminar #divOptionsBeforeDelete #textoAvisoBorrado{
+    margin: 4.5% 0 4.5%;
+    }
+
+.page-poll #divEliminar #divOptionsBeforeDelete #buttonSubmitDelete{
+    width: 180px;
+    height: 60px;
+    background-color: rgb(124, 0, 0);
+    color: white;
+    font-size: 25px;
+    font-weight: bolder;
+    border-radius: 10px;
+    border: 4px solid rgb(255, 230, 0);
+    margin-right: 40px;
+}
+
+.page-poll #divEliminar #divOptionsBeforeDelete #buttonCancel{
+    width: 180px;
+    height: 60px;
+    background-color: rgb(65, 255, 138);
+    color: black;
+    font-size: 25px;
+    font-weight: bolder;
+    border-radius: 10px;
+    border: 4px solid rgb(0, 88, 37);
+    margin-left: 40px;
+
+}
+
 #divAlertas{
     width: 100%;
     text-align: center;
