--- a/styles.css
+++ b/styles.css
@@ -780,6 +780,12 @@ i{
     border: none;
 }
 
+.page-poll #divToRemove #formUpdateQuestion #updateTitle{
+    display: inline;
+    width: 80%;
+    margin-top: 45px;
+}
+
 #divAlertas{
     width: 100%;
     text-align: center;
